# ml-tech-assessment

./: .gitignore  .pre-commit-config.yaml  README_API.md  TODO.md  assessment.md  pyproject.toml
app/: configurations.py  dependencies.py  main.py
app/adapters/: openai.py
app/domain/: entities.py
app/ports/: llm.py  summary.py  summary_repository.py
app/repositories/: in_memory.py
app/routers/: Untitled  extras.py  summary.py
app/schemas/: llm_responses.py  requests.py  responses.py
tests/adapters/: mock_data.py  test_openai.py
